# HelloVelloCpu

./: .gitignore  1.txt  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/demo/hellovello/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/demo/hellovello/: MainActivity.kt
app/src/main/java/com/demo/hellovello/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/demo/: VelloSurfaceView.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/demo/hellovello/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rustlib/: Cargo.toml
rustlib/.cargo/: config.toml
rustlib/examples/: interactive_box.rs
rustlib/src/: interactive_box.rs  lib.rs  macros.rs
rustlib/src/internal/: mod.rs  msgs.rs  render_thread.rs
