[package]
name = "rustlib"
version = "0.1.0"
edition = "2024" # 触发 unsafe no_mangle 的根本原因

[dependencies]
vello_cpu = "0.0.7"
vello = "0.8.0"
crossbeam = "0.8"
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = "0.8"

# 修复 E0433: 将 android_logger 加入到 dev-dependencies，这样 example 就能找到了
[dev-dependencies]
android_logger = "0.13"

[[example]]
name = "interactive_box"
crate-type = ["cdylib"]