[package]
name = "rustlib"
version = "0.1.0"
edition = "2024"  # 触发 unsafe no_mangle 的根本原因

[lib]
name = "rustlib"
crate-type = ["cdylib"]

[dependencies]
vello_cpu = "0.0.7"
crossbeam = "0.8"
log = "0.4"
kurbo = "0.13"
peniko = "0.6"
rayon = "1.12"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk = "0.9"
android_logger = "0.13"
log-panics = { version = "2", features = ["with-backtrace"] }
